--- a/app/src/main/res/layout/fragment_daily_routine.xml
+++ b/app/src/main/res/layout/fragment_daily_routine.xml
@@ -61,6 +61,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_name">
 
+            <ImageButton
+                android:id="@+id/btn_daily_routine_radio_empty_first"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="21dp"
+                android:background="@drawable/selector_daily_edit"
+                android:visibility="@{viewModel.isDeleteView ? View.VISIBLE: View.INVISIBLE}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <ImageView
                 android:id="@+id/iv_daily_routine_icon_first"
                 android:layout_width="wrap_content"
