--- a/app/src/main/res/layout/fragment_onboarding_choice_routine.xml
+++ b/app/src/main/res/layout/fragment_onboarding_choice_routine.xml
@@ -113,6 +113,7 @@
             android:background="@drawable/shape_gray100_fill_12_rect"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="33dp"
+            android:outlineProvider="none"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/btn_onboarding_routine_select_routine" />
