--- a/app/src/main/res/drawable/shape_white_fill_gray100_stroke_20_rect.xml
+++ b/app/src/main/res/drawable/shape_white_fill_gray100_stroke_20_rect.xml
@@ -2,9 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="20dp"/>
-    <solid android:color="@color/white"/>
-    <stroke android:color="@color/gray100"
-        android:width="1dp"/>
+    <corners android:radius="20dp" />
+    <solid android:color="@color/white" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/gray100" />
 
 </shape>
