#40 [chore] color 값 추가

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,6 +33,7 @@
     <color name="name_fill">#FFD4BBA5</color>
     <color name="name_stroke">#FFC4AC98</color>
     <color name="home_background">#FFF4F3E4</color>
+    <color name="home_background_error">#FFE0C8B3</color>
 
     <!-- onboarding -->
     <color name="onboarding_speech">#FF259560</color>
