--- a/app/src/main/res/layout/activity_daily_routine_edit.xml
+++ b/app/src/main/res/layout/activity_daily_routine_edit.xml
@@ -16,7 +16,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        android:background="@color/background">
 
         <TextView
             android:id="@+id/tv_daily_routine_edit_name"
