--- a/app/src/main/res/layout/fragment_daily_routine.xml
+++ b/app/src/main/res/layout/fragment_daily_routine.xml
@@ -46,7 +46,7 @@
             android:id="@+id/v_daily_routine_blank"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:visibility="@{viewModel.routineAddList.size() == 0 ? View.VISIBLE : View.GONE}"
+            android:visibility="@{viewModel.mockDailyRoutineList.size() == 0 ? View.VISIBLE : View.GONE}"
             app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_name" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -56,13 +56,13 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/shape_white_fill_gray100_stroke_20_rect"
-            android:visibility="@{viewModel.routineAddList.size() >= 1 ? View.VISIBLE : View.GONE}"
+            android:visibility="@{viewModel.mockDailyRoutineList.size() >= 1 ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_name">
 
             <ImageButton
-                android:id="@+id/btn_daily_routine_radio_empty_first"
+                android:id="@+id/btn_daily_routine_radio_first"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -141,10 +141,21 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/shape_white_fill_gray100_stroke_20_rect"
-            android:visibility="@{viewModel.routineAddList.size() >= 2 ? View.VISIBLE : View.GONE}"
+            android:visibility="@{viewModel.mockDailyRoutineList.size() >= 2 ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl_daily_routine_first">
+
+            <ImageButton
+                android:id="@+id/btn_daily_routine_radio_second"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="21dp"
+                android:background="@drawable/selector_daily_edit"
+                android:visibility="@{viewModel.isDeleteView ? View.VISIBLE: View.INVISIBLE}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/iv_daily_routine_icon_second"
@@ -210,10 +221,21 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/shape_white_fill_gray100_stroke_20_rect"
-            android:visibility="@{viewModel.routineAddList.size() == 3 ? View.VISIBLE : View.GONE}"
+            android:visibility="@{viewModel.mockDailyRoutineList.size() == 3 ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl_daily_routine_second">
+
+            <ImageButton
+                android:id="@+id/btn_daily_routine_radio_third"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="21dp"
+                android:background="@drawable/selector_daily_edit"
+                android:visibility="@{viewModel.isDeleteView ? View.VISIBLE: View.INVISIBLE}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/iv_daily_routine_icon_third"
@@ -283,7 +305,7 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/shape_gray200_line_20_rect"
             android:clickable="true"
-            android:visibility="@{viewModel.routineAddList.size() == 3 ? View.GONE : View.VISIBLE}"
+            android:visibility="@{viewModel.mockDailyRoutineList.size() == 3 ? View.GONE : View.VISIBLE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl_daily_routine_third">
@@ -300,20 +322,20 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_daily_routine_edit_delete_nothing"
+            android:id="@+id/btn_daily_routine_delete"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="16dp"
             android:background="@{viewModel.isEditBtnEnabled ? @drawable/shape_red_fill_12_rect : @drawable/shape_gray200_fill_12_rect}"
             android:clickable="@{viewModel.isEditBtnEnabled ? true : false}"
             android:enabled="@{viewModel.isEditBtnEnabled ? true : false}"
-            android:visibility="@{viewModel.isDeleteView ? View.VISIBLE : View.INVISIBLE}"
             android:paddingTop="20dp"
             android:paddingBottom="18dp"
             android:text="@string/daily_routine_edit_delete_nothing"
             android:textAppearance="@style/body1"
             android:textColor="@color/gray000"
+            android:visibility="@{viewModel.isDeleteView ? View.VISIBLE : View.INVISIBLE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
