#42 [feat] 각 아이템 삭제 버튼 클릭시 버튼에 삭제 개수 띄우기

--- a/app/src/main/res/layout/fragment_daily_routine.xml
+++ b/app/src/main/res/layout/fragment_daily_routine.xml
@@ -332,7 +332,7 @@
             android:enabled="@{viewModel.isEditBtnEnabled ? true : false}"
             android:paddingTop="20dp"
             android:paddingBottom="18dp"
-            android:text="@string/daily_routine_edit_delete_nothing"
+            android:text="@{@string/daily_routine_edit_delete(viewModel.editRoutineIdArray.size)}"
             android:textAppearance="@style/body1"
             android:textColor="@color/gray000"
             android:visibility="@{viewModel.isDeleteView ? View.VISIBLE : View.INVISIBLE}"
