--- a/app/src/main/res/layout/item_daily_routine_add_card.xml
+++ b/app/src/main/res/layout/item_daily_routine_add_card.xml
@@ -6,8 +6,9 @@
 
     <ImageView
         android:id="@+id/tv_daily_routine_add_card"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="280dp"
+        android:layout_height="398dp"
+        app:layout_constraintDimensionRatio="0.7"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_daily_routine_card"
         app:layout_constraintEnd_toEndOf="parent"
