#40 [ui] button 그림자 없애기

--- a/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
+++ b/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
@@ -45,6 +45,7 @@
             android:background="@{themeViewModel.themeBtnEnabled ? @drawable/shape_main1_fill_12_rect : @drawable/shape_gray200_fill_12_rect}"
             android:enabled="@{themeViewModel.themeBtnEnabled ? true : false}"
             android:clickable="@{themeViewModel.themeBtnEnabled ? true : false}"
+            android:outlineProvider="none"
             android:layout_marginHorizontal="20dp"
             android:layout_marginBottom="34dp"
             app:layout_constraintStart_toStartOf="parent"
