--- a/app/src/main/res/layout/fragment_onboarding_choice_routine.xml
+++ b/app/src/main/res/layout/fragment_onboarding_choice_routine.xml
@@ -130,6 +130,7 @@
             android:background="@{routineViewModel.isRoutineBtnEnabled ? @drawable/shape_main1_fill_12_rect : @drawable/shape_gray200_fill_12_rect}"
             android:enabled="@{routineViewModel.isRoutineBtnEnabled ? true : false}"
             android:clickable="@{routineViewModel.isRoutineBtnEnabled ? true : false}"
+            android:outlineProvider="none"
             app:layout_constraintTop_toTopOf="@id/btn_onboarding_routine_back_theme"
             app:layout_constraintBottom_toBottomOf="@id/btn_onboarding_routine_back_theme"
             app:layout_constraintEnd_toEndOf="parent"
