--- a/app/src/main/res/layout/fragment_daily_routine.xml
+++ b/app/src/main/res/layout/fragment_daily_routine.xml
@@ -121,11 +121,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
-                android:background="@drawable/shape_main1_fill_10_rect"
+                android:background="@{viewModel.isRoutineAchieveFirst ? @drawable/shape_main1_fill_10_rect: @drawable/shape_gray100_fill_10_rect}"
+                android:enabled="@{!viewModel.isRoutineAchieveFirst}"
+                android:clickable="@{!viewModel.isRoutineAchieveFirst}"
+                android:text="@{viewModel.isRoutineAchieveFirst ? @string/daily_routine_fin_btn : @string/daily_routine_fin}"
                 android:minHeight="0dp"
                 android:paddingTop="10dp"
                 android:paddingBottom="11dp"
-                android:text="@string/daily_routine_fin_btn"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/white"
                 android:outlineProvider="none"
@@ -207,8 +209,10 @@
                 android:layout_height="38dp"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
-                android:background="@drawable/shape_main1_fill_10_rect"
-                android:text="@string/daily_routine_fin_btn"
+                android:background="@{viewModel.isRoutineAchieveSecond ? @drawable/shape_main1_fill_10_rect: @drawable/shape_gray100_fill_10_rect}"
+                android:enabled="@{!viewModel.isRoutineAchieveSecond}"
+                android:clickable="@{!viewModel.isRoutineAchieveSecond}"
+                android:text="@{viewModel.isRoutineAchieveSecond ? @string/daily_routine_fin_btn : @string/daily_routine_fin}"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/white"
                 android:outlineProvider="none"
@@ -288,11 +292,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
-                android:background="@drawable/shape_main1_fill_10_rect"
+                android:background="@{viewModel.isRoutineAchieveThird ? @drawable/shape_main1_fill_10_rect: @drawable/shape_gray100_fill_10_rect}"
+                android:enabled="@{!viewModel.isRoutineAchieveThird}"
+                android:clickable="@{!viewModel.isRoutineAchieveThird}"
+                android:text="@{viewModel.isRoutineAchieveThird ? @string/daily_routine_fin_btn : @string/daily_routine_fin}"
                 android:minHeight="0dp"
                 android:paddingTop="10dp"
                 android:paddingBottom="11dp"
-                android:text="@string/daily_routine_fin_btn"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/white"
                 android:outlineProvider="none"
